fix(nginx): cors

--- a/nginx.conf
+++ b/nginx.conf
@@ -17,15 +17,21 @@ http {
         # Servir archivos estáticos del MFE
         root /usr/share/nginx/html;
 
+        # CORS headers para Module Federation
+        add_header 'Access-Control-Allow-Origin' '*' always;
+        add_header 'Access-Control-Allow-Methods' 'GET, OPTIONS' always;
+        add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range' always;
+
         # Try files para SPA routing (necesario para Angular)
         location / {
             try_files $uri $uri/ /index.html;
         }
 
         # Cache control para archivos con hash (como los JS compilados)
-        location ~* (remoteEntry\.js|main\.js|polyfills|scripts)\.[0-9a-f]{20}\.js$ {
+        location ~* \.(js|css)$ {
             expires 1y;
-            add_header Cache-Control "public";
+            add_header Cache-Control "public, immutable";
+            add_header 'Access-Control-Allow-Origin' '*' always;
         }
 
         error_page 500 502 503 504 /50x.html;
